tests/Rules/Structure/Fixtures/invalid/no_skip_link.html.twig
<nav>Navigation</nav>
<div id="main">Content without skip link</div>
